# unitree_go2w_ros2

./: README.md
champ/champ_bringup/launch/: bringup.launch.py
go2w_config/config/gait/: gait.yaml
go2w_config/launch/: champ_bringup.launch.py
go2w_control/: CMakeLists.txt  package.xml
go2w_control/launch/: gazebo_with_control.launch.py  gazebo_with_high_level.launch.py  gazebo_with_low_level.launch.py  joint_publisher.launch.py  position_control.launch.py
go2w_control/src/: high_level_publisher_IHM.py  joint_publisher_IHM.py  position_control.cpp
go2w_description/: CMakeLists.txt  package.xml
go2w_description/config/: joint_controller.yaml  robot_control.yaml  ros2_control.yaml  rviz_config.rviz
go2w_description/launch/: gazebo.launch.py  go2w_rviz.launch.py
go2w_description/src/: joint_publisher.cpp
go2w_description/urdf/: const.xacro  go2w_description.urdf.xacro
