<?xml version="1.0"?>
<package format="3">
  <name>go2w_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for go2w_description.
    This package contains configuration data, 3D models, and launch files for the go2w_description robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- ROS 2 build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
